Pass game info to html template

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,7 @@
-<h1>Hi</h1>
+<html>
+
+<h1>Welcome to hangman</h1>
+<p>Guessed so far: {{ session.guess_result }}</p>
+<p>Guessed characters: {{ session.guessed_chars }}</p>
+
+</html>
