--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
 
+:root {
+}
+
+* {
+    box-sizing: border-box;
+  }
+
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Press Start 2P', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
